--- a/platforms/ios/www/css/olharecife.css
+++ b/platforms/ios/www/css/olharecife.css
@@ -23,6 +23,36 @@
     height: 20px;
 }
 
+/*
+* Button
+*/
+
+#roteiro-type {
+    position:absolute;
+    bottom: 5%;
+    right:5%;
+}
+
+.btn {
+    background-image: none;
+    border-width: 0;
+}
+
+.btn-circle {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 50%; 
+}
+
+.btn-group-vertical > button{
+    margin-bottom:10px;
+    border-radius:10px !important;
+}
+
 
 /*
 * Navigation
