--- a/www/css/olharecife.css
+++ b/www/css/olharecife.css
@@ -18,9 +18,12 @@
 }
 
 #roteiro {
-    background-color: yellow;
+    background-color: #F8AE1A;
     width: 100%;
     height: 20px;
+    padding-left: 2.5%;
+    font-family: 'Verdana';
+    font-size: 13px;
 }
 
 /*
@@ -43,8 +46,8 @@
 }
 
 .btn-circle {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     padding: 6px 0;
     font-size: 12px;
@@ -57,6 +60,21 @@
     border-radius:10px !important;
 }
 
+#btn-pe {
+    background-color: #E35E50;
+}
+
+#btn-onibus {
+    background-color: #20BA9B;
+}
+
+#btn-bike {
+    background-color: #DEC520;
+}
+
+#btn-barco {
+    background-color: #4BA2DC;
+}
 
 /*
 * Navigation
@@ -92,6 +110,9 @@
     background-color: white;
 }
 
+.nav>li>a:focus, .nav>li>a:hover {
+    color:#428bca;
+}
 
 /*
 * Barra de busca
